--- a/style.css
+++ b/style.css
@@ -56,17 +56,33 @@ main .header{
 .content .hr , .content .stop-watch-counter .min{
     display: none;
 }
-.content input{
-    background-color: transparent;
-    border: none;
-    font-size: 40px;
+.content .timeInput{
     display: none;
-    color: #fff;
+    color: #e8eaed;
 }
-.content input:focus{
-    border: none;
-    outline: none;
+.content  .num {
+    font-size: 36px;
 }
+.content  .char {
+    font-size: 20px;
+    padding-right: 18px;
+}
+
+.content input{
+    width: 0px;
+    height: 0px;
+    background-color: transparent;
+    border: 0;
+    display: none;
+}
+
+.content label .unit.hide {
+    display: none;
+}
+.content label .unit.pure {
+    color: #80868b;
+}
+
 .timeline{
     position:absolute;
     border-bottom: 3px solid #8ab4f8;
@@ -74,7 +90,9 @@ main .header{
     width: 0;
     left: -20px;
     bottom: -20px;
+    transition: 0.3s all ease-in-out;
 }
+
 /* footer timer style  */
 .footer{
     display: flex;
